# openshift-partner-labs-mcp-server

./: .containerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Containerfile  Makefile  README.md  compose.yaml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: README.md  fastmcp_client.py  langgraph_client.py
openshift/: README.md  configmap.yaml  deployment.yaml  kustomization.yaml  limitrange.yaml  route.yaml  service.yaml  tenant.yaml
openshift_partner_labs_mcp_server/: __init__.py
openshift_partner_labs_mcp_server/src/: README.md  __init__.py  api.py  main.py  mcp.py  settings.py
openshift_partner_labs_mcp_server/src/assets/: README.md
openshift_partner_labs_mcp_server/src/oauth/: __init__.py  controller.py  handler.py  models.py  routes.py  service.py
openshift_partner_labs_mcp_server/src/storage/: __init__.py  storage_service.py
openshift_partner_labs_mcp_server/src/tools/: README.md  __init__.py  code_review_tool.py  multiply_tool.py  redhat_logo_tool.py
openshift_partner_labs_mcp_server/utils/: __init__.py  pylogger.py
tests/: README.md  conftest.py  test_api.py  test_basic.py  test_container.py  test_main.py  test_mcp.py  test_oauth_controller.py  test_oauth_handler.py  test_oauth_service.py  test_settings.py  test_storage_init.py  test_storage_service.py  test_tools.py  test_utils.py
